--- a/ceramics.html
+++ b/ceramics.html
@@ -93,14 +93,14 @@
 								<div class="sliderImage">
 									<div class="slidesImage">
 										<div class="slideImage" onclick="showImage('./images/ceramics/image_original18.jpeg')" style="background-image: url(./images/ceramics/image18.jpg); display: block;"></div>
-										<div class="slideImage" onclick="showImage('./images/ceramics/image_original19.jpeg')" style="background-image: url(./images/ceramics/image19.jpg); display: none;"></div>
-										<div class="slideImage" onclick="showImage('./images/ceramics/image_original20.jpeg')" style="background-image: url(./images/ceramics/image20.jpg); display: none;"></div>
+										<!-- <div class="slideImage" onclick="showImage('./images/ceramics/image_original19.jpeg')" style="background-image: url(./images/ceramics/image19.jpg); display: none;"></div>
+										<div class="slideImage" onclick="showImage('./images/ceramics/image_original20.jpeg')" style="background-image: url(./images/ceramics/image20.jpg); display: none;"></div> -->
 									</div>
-									<button class="prevImgSlider" onclick="changeSlide(-1, this)">&#10094;</button>
-									<button class="nextImgSlider" onclick="changeSlide(1, this)">&#10095;</button>
+									<!-- <button class="prevImgSlider" onclick="changeSlide(-1, this)">&#10094;</button>
+									<button class="nextImgSlider" onclick="changeSlide(1, this)">&#10095;</button> -->
 								</div>
 								<div class="title">
-									<h4>Design 18</h4>
+									<h4>Royal Crown Blue</h4>
 								</div>
 							</div>
 						</div>
