--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 				</ul>
 			</nav>
 
+			<!-- <div>
+				<button onclick="setLanguage('en')">English</button>
+				<button onclick="setLanguage('it')">Italian</button>
+			</div> -->
+
 			<div class="colorlib-footer">
 				<ul>
 					<li><a target="_blank" title="Facebook" href="https://www.facebook.com/profile.php?id=61560947136736&mibextid=ZbWKwL"><i class="icon-facebook2"></i></a></li>
@@ -90,8 +95,8 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-push-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>The Sculptures Gallery</h1>
-						   					<h2>Antique or modern, our sculptures captivate with unique allure.</h2>
+						   					<h1 data-en="The Sculptures Gallery" data-it="IT The Sculptures Gallery"></h1>
+						   					<h2 data-en="Antique or modern, our sculptures captivate with unique allure." data-it="IT Antique or modern, our sculptures captivate with unique allure."></h2>
 												<p><a href="sculptures.html" class="btn btn-primary btn-learn innerTextATag">View Gallery <i class="icon-arrow-right3"></i></a></p>
 											</div>
 					   				</div>
@@ -225,7 +230,7 @@
 										</div>
 										<div class="colorlib-text">
 											<h3>Interior Design</h3>
-											<p>Creating unique spaces is our speciality! <br> Whatever your style or preference, our interior design expert will help you achievethe space of yur dreams.</p>
+											<p>Creating unique spaces is our speciality! <br> Whatever your style or preference, our interior design expert will help you achieve the space of your dreams.</p>
 										</div>
 									</div>
 								</div>
