--- a/sculptures.html
+++ b/sculptures.html
@@ -94,9 +94,10 @@
 								<div class="sliderImage">
 									<div class="slidesImage">
 										<div class="slideImage" onclick="showImage('./images/sculptures/image_original1.jpg')" style="background-image: url(./images/sculptures/image1.jpg); display: block;"></div>
+										<div class="slideImage" onclick="showImage('./images/sculptures/S_Antique_Angel_Candleholder.jpg')" style="background-image: url(./images/sculptures/S_Antique_Angel_Candleholder_T.jpg); display: none;"></div>
 									</div>
-									<!-- <button class="prevImgSlider" onclick="changeSlide(-1, this)">&#10094;</button>
-									<button class="nextImgSlider" onclick="changeSlide(1, this)">&#10095;</button> -->
+									<button class="prevImgSlider" onclick="changeSlide(-1, this)">&#10094;</button>
+									<button class="nextImgSlider" onclick="changeSlide(1, this)">&#10095;</button>
 								</div>
 								<div class="title">
 									<h4>Antique Angel Candleholder (period 1700’s)</h4>
