--- a/services.html
+++ b/services.html
@@ -98,7 +98,7 @@
 										</div>
 										<div class="colorlib-text">
 											<h3>Ceramics artistry</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<p>Our exclusive, hand-made ceramics are carefully selected from the top artists in Sicily – their mission and ours is to bring you unique, colorful and vibrant pieces that give a special touch to your surroundings. </p>
 										</div>
 									</div>
 
@@ -108,7 +108,7 @@
 										</div>
 										<div class="colorlib-text">
 											<h3>Sculpture craftsmanship</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<p>Whether you love antique or modern art, our selection of sculptures will leave you in fascinating awe of their special shapes, textures and history. </p>
 										</div>
 									</div>
 								</div>
@@ -123,7 +123,7 @@
 										</div>
 										<div class="colorlib-text">
 											<h3>Wall Art</h3>
-											<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+											<p>Take a trip from the past to the present with various local and international artists who will surprise you with their techniques, colors and style. </p><br>
 										</div>
 									</div>
 									<div class="colorlib-feature " data-animate-effect="fadeInLeft">
@@ -132,7 +132,7 @@
 										</div>
 										<div class="colorlib-text">
 											<h3>Interior Design</h3>
-											<p>Creating unique spaces is our speciality! <br> Whatever your style or preference, our interior design expert will help you achievethe space of yur dreams.</p>
+											<p>Creating unique spaces is our speciality! <br> Whatever your style or preference, our interior design expert will help you achieve the space of your dreams.</p>
 										</div>
 									</div>
 								</div>
