--- a/about.html
+++ b/about.html
@@ -128,56 +128,69 @@
 								<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 									<a target="_blank" href="https://www.instagram.com/reel/C9XOfY4IY-3/" class="project imageContainer colorlib-feature colorlib-feature-sm" style="background-image: url(./images/promotional_video_instagram.png);">
 									</a>
-									<!-- <div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingOne">
-									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Why choose us?
-									            </a>
-									        </h4>
-									    </div>
-									    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-									         <div class="panel-body">
-									            <div class="row">
-										      		<div class="col-md-6">
-										      			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-										      		</div>
-										      		<div class="col-md-6">
-										      			<p>Contact us for more information on your special art piece.</p>
-										      		</div>
-										      	</div>
-									         </div>
-									    </div>
-									</div> -->
-									<!-- <div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingTwo">
-									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">What we do?
-									            </a>
-									        </h4>
-									    </div>
-									    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Contact us for more information on your special art piece.</p>
-													<ul>
-														<li>Separated they live in Bookmarksgrove right</li>
-														<li>Separated they live in Bookmarksgrove right</li>
-													</ul>
-									        </div>
-									    </div>
+								</div>
+							</div>
+						</div>
+						<!-- <div class="col-md-4 " data-animate-effect="fadeInLeft">
+							<h2 class="colorlib-heading">News and Events</h2>
+							<p>We are happy to share our adventures - here's what we've been up to lately!</p>
+						</div>
+						<div class="col-md-4" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(./images/news_1.png);">
+								<div class="desc">
+									<div class="con" style="cursor: default;">
+										<h3><a style="cursor: default;">Art Leone - Protagonists at Noto Fashion Week</a></h3>
+										<span>Taormina grande protagonista alla Fashion Week a Noto...</span>
+										<p class="icon">
+											<span><a id="newsEventATag1" target="_blank"  href="https://taorminanews24.com/art-leone-letojanni-taormina-grande-protagonista-alla-fashion-week-a-noto-video/" style="padding: 10px;">Read more...</a></span>
+										</p>
 									</div>
-									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingThree">
-									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Our Specialties
-									            </a>
-									        </h4>
-									    </div>
-									    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-									        <div class="panel-body">
-									            <p>Far far away, behind the word <strong>mountains</strong>, far from the countries Vokalia and Consonantia, there live the blind texts. Contact us for more information on your special art piece.</p>	
-									        </div>
-									    </div>
-									</div> -->
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(./images/news_2.jpeg); ">
+								<div class="desc">
+									<div class="con" style="cursor: default;">
+										<h3><a style="cursor: default;">Art Leone opens in Letojanni!</a></h3>
+										<span>Taormina, nel cuore della Sicilia l’atelier della bellezza senza tempo...</span>
+										<p class="icon">
+											<span><a id="newsEventATag1" target="_blank"  href="https://taorminanews24.com/art-leone-letojanni-taormina-nel-cuore-della-sicilia-latelier-della-bellezza-senza-tempo-video/" style="padding: 10px;">Read more...</a></span>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div> -->
+					</div>
+				</div>
+			</div>
+
+			<div class="colorlib-blog">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Read</span>
+							<h2 class="colorlib-heading">News and Events</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-4 col-sm-6" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a target="_blank" href="https://taorminanews24.com/art-leone-letojanni-taormina-grande-protagonista-alla-fashion-week-a-noto-video/" class="blog-img"><img src="./images/news_1.png" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<div class="desc">
+									<span><small>August 3, 2024 </small></span>
+									<h3><a target="_blank" href="https://taorminanews24.com/art-leone-letojanni-taormina-grande-protagonista-alla-fashion-week-a-noto-video/">Art Leone - Protagonists at Noto Fashion Week</a></h3>
+									<p>Taormina grande protagonista alla Fashion Week a Noto...</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-6" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a target="_blank" href="https://taorminanews24.com/art-leone-letojanni-taormina-nel-cuore-della-sicilia-latelier-della-bellezza-senza-tempo-video/" class="blog-img"><img src="./images/news_2.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<div class="desc">
+									<span><small>July 17, 2024</small></span>
+									<h3><a target="_blank" href="https://taorminanews24.com/art-leone-letojanni-taormina-nel-cuore-della-sicilia-latelier-della-bellezza-senza-tempo-video/">Wordpress for a Beginner</a></h3>
+									<p>Taormina, nel cuore della Sicilia l’atelier della bellezza senza tempo...</p>
 								</div>
 							</div>
 						</div>
